Fixing spacing for Pilota image

--- a/css/index.css
+++ b/css/index.css
@@ -591,7 +591,7 @@
       margin-left: 0vw;
     }
     .pilota {
-      max-width: 110%;
+      max-width: 106%;
       margin-top: 1vw;
       margin-left: -4vw;
     }
